# hk-flight-data

./: .gitignore  flights.csv  generate.py  index.html  pyproject.toml  shell.nix
.github/workflows/: gh-pages.yml
